Fix swapfile Upstart job

--- a/files/etc/init/swapfile.conf
+++ b/files/etc/init/swapfile.conf
@@ -7,19 +7,21 @@ author		"Lauri Võsandi <lauri.vosandi@gmail.com>"
 start on filesystem
 
 script
-    SWAPDIR=/var/cache/swapfile
+    if [ -z $container ]; then
+        SWAPDIR=/var/cache/swapfile
 
-    devpath=$(losetup -f)
-    name=$(basename $devpath)
-    path=$SWAPDIR/$name
+        devpath=$(losetup -f)
+        name=$(basename $devpath)
+        path=$SWAPDIR/$name
 
-    mkdir -p $SWAPDIR
-    truncate -s 4G $path     # Create /var/cache/swapfile/loop?
-    chattr +C $path          # Disable copy-on-write for swap
-    chmod 700 $path          # Just in case
-    mkswap $path             # Create swap filesystem
-    losetup $devpath $path   # Bind file to /dev/loop?
-    swapon $devpath          # Enable swap on /dev/loop?
-    rm $path                 # Remove /var/cache/swapfile/loop?
+        mkdir -p $SWAPDIR
+        truncate -s 4G $path     # Create /var/cache/swapfile/loop?
+        chattr +C $path          # Disable copy-on-write for swap
+        chmod 700 $path          # Just in case
+        mkswap $path             # Create swap filesystem
+        losetup $devpath $path   # Bind file to /dev/loop?
+        swapon $devpath          # Enable swap on /dev/loop?
+        rm $path                 # Remove /var/cache/swapfile/loop?
+    fi
 end script
 
